Fixed some alignment issues. Moved favicon generation to an independent task and included that task in deployment

--- a/app/assets/stylesheets/cookies_eu.scss
+++ b/app/assets/stylesheets/cookies_eu.scss
@@ -11,7 +11,7 @@
 
   .cookies-eu-content-holder {
     display: inline-block;
-    float: left;
+    // float: left;
     padding: 10px 12px;
     line-height: 15px;
 
